--- a/day05/product2.html
+++ b/day05/product2.html
@@ -7,13 +7,16 @@
     </head>
     <body>
         <div id="container">
+            <header>
             <nav>
                 <a href="index.html">Home</a> |
                 <a href="product2.html">상품소개</a> |
                 <a href="#">공지사항</a>
             </nav>
+            </header>
             <div id="description">
                 <h1>레드향</h1>
+                <img src="images/tangerines.jpg" alt="레드향">
                 <p>껍질에 붉은 빛이 돌아 레드향이라 불린다.</p>
                 <P>레드향은 <em>한라봉과 귤을 교배</em>한 것으로<br>
                 알맹이가 굵고 통통해 식감이 좋으며<br> 비타민 C와 비타민 P가 
