--- a/day07-jeju/video_salad.html
+++ b/day07-jeju/video_salad.html
@@ -5,8 +5,8 @@
         <title>비디오 넣기</title>
     </head>
     <body>
-        <h2>비디오 재생하기</h2>
-        <video src="medias/salad.mp4" controls width="700">
+        <h2>레드향 샐러드</h2>
+        <video src="medias/salad.mp4" autoplay width="700">
             <source src="medias/salad.mp4" type="video/mp4">
         </video>
     </body>
