--- a/day08/2-order.html
+++ b/day08/2-order.html
@@ -44,11 +44,13 @@
                 <ul id="shipping">
                     <li>
                         <label for="name">이름</label>
-                        <input for="text" name="name" id="name">
+                        <input for="text" name="name" id="name" autofocus required>
+                        <!-- autofocus 처음 커서 위치를 자동으로 설정 -->
+                        <!-- required 필수 입력 속성 -->
                     </li>
                     <li>
                         <label for="email">배송 주소</label>
-                        <input for="text" name="addr" id="addr">
+                        <input for="text" name="addr" id="addr" required>
                     </li>
                     <li>
                         <label for="name">이메일</label>
@@ -56,7 +58,7 @@
                     </li>
                     <li>
                         <label for="phone">연락처</label>
-                        <input for="tel" name="phone" id="phone">
+                        <input for="tel" name="phone" id="phone" required placeholder="하이픈(-)을 빼고 입력해주세요">
                     </li>
                 </ul>
             </fieldset>
