--- a/day09/5-pos_rel_abs.html
+++ b/day09/5-pos_rel_abs.html
@@ -11,10 +11,9 @@
             height: 300px;
             border: 1px solid #ccc;
             position: relative;
-            /* 부모 박스가 기준이 됨 */
         }
         .box{width: 50px; height: 50px; background: blue; position: absolute;}
-        #coord1{top: 0; left: 0; /* 왼쪽 위 끝의 경우 넣지 않아도 나옴 */}
+        #coord1{top: 0; left: 0;}
         #coord2{top: 0; right: 0;}
         #coord3{bottom: 0; left: 0;}
         #coord4{bottom: 0; right: 0;}
