--- a/day09/7-market.html
+++ b/day09/7-market.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>연습문제 4</title>
 	<style>
-		#container{width: 640px; /* 이미지 파일 크기 이상 */ margin: 0 auto;}
+		#container{width: 640px; margin: 0 auto;}
 		#check{border: 1px solid #ccc}
 		#check h1{color: white; background-color: black; font-size: 1em; margin: 0; padding: 10px;}
 		#container h2{color: #ff0000; font-size: 1.5em; text-align: center;}
@@ -34,5 +34,3 @@
 	</div>
 </body>
 </html>
-
-<!-- page : 236 -->
